# rust-hyperdex

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
errno/: fn.errno.html  fn.set_errno.html  index.html  stability.html  stability.json  struct.Errno.html
hyperdex/: enum.HyperObjectKeyError.html  enum.HyperPredicateType.html  enum.HyperValue.html  index.html  macro.NewHyperMapAttribute!.html  macro.NewHyperObject!.html  sidebar-items.js  stability.html  stability.json  struct.Admin.html  struct.Client.html  struct.F64.html  struct.HyperError.html  struct.HyperMapAttribute.html  struct.HyperObject.html  struct.HyperPredicate.html
hyperdex/admin/: sidebar-items.js  struct.Admin.html
hyperdex/client/: sidebar-items.js  struct.Client.html
hyperdex/client_types/: enum.HyperObjectKeyError.html  enum.HyperPredicateType.html  enum.HyperValue.html  sidebar-items.js  struct.F64.html  struct.HyperMapAttribute.html  struct.HyperObject.html  struct.HyperPredicate.html
hyperdex/common/: sidebar-items.js  struct.HyperError.html
implementors/core/clone/: trait.Clone.js
num_cpus/: fn.get.html  index.html
src/: admin.rs  bindgen.py  client.rs  client_types.rs  common.rs  hyperdex.rs  hyperdex_admin.rs  hyperdex_client.rs  hyperdex_datastructures.rs  hyperdex_hyperspace_builder.rs  lib.rs  test.rs
src/errno/: lib.rs.html  unix.rs.html
src/gcc/: lib.rs.html
src/hyperdex/: admin.rs.html  client.rs.html  client_types.rs.html  common.rs.html  lib.rs.html
src/libc/: lib.rs.html
src/num_cpus/: lib.rs.html
(+8 files in other folders)
