[package]

name = "hyperdex"
version = "1.0.0"
authors = ["Derek Chiang <derekchiang93@gmail.com>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = "Rust binding for HyperDex, the next-generation distributed key-value store"

# These URLs point to more information about the repository
# documentation = "..."
homepage = "https://github.com/derekchiang/rust-hyperdex"
repository = "https://github.com/derekchiang/rust-hyperdex"

# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["database", "bindings", "binding", "NoSQL", "HyperDex"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "BSD-2-Clause"

[dependencies]
libc = "*"
num_cpus = "*"
errno = "0.1.2"
rustc-serialize = "0.3.15"
